# banner_scanner

./: .gitignore  README.md  __init__.py  __main__.py  batch_scanner.py  build_fingerprints.py  cli.py  mcp.json  migrate_fingerprints_v2.py  offline_match.py  pyproject.toml  scan.py  scanner_test.py  vendors.json  verify_mcp.py
core/: __init__.py  breaker.py  database_matcher.py  engine.py  evidence.py  identification.py  identify.py  log.py  matcher.py  models.py  parsers.py  protocol_detection.py  retry.py  transport.py
docs/: ARCHITECTURE.md  PROTOCOLS.md
evaluation/: README.md  __init__.py  active_fingerprint_eval.py  build_sse_cherry_manifest.py  fingerprint_ssh_paramiko_modsftp.db  software_catalog.py  sse_full_flow_eval.py  ssh_focus_eval.py  validate_fingerprint_corpora.py
examples/: mcp.streamable-http.json
fingerprints/databases/: mysql_fingerprints.json  pgsql_fingerprints.json  redis_fingerprints.json
fingerprints/protocols/: ftp_fingerprints.json  ssh_fingerprints.json  (+1 more)
probes/: __init__.py  ftp.py  mysql.py  pgsql.py  redis.py  ssh.py  telnet.py
server/: audit.py  fastmcp_standalone.py  http_middleware.py  logging_config.py  mcp_app.py  mcp_http_server.py  mcp_server.py  policy.py  serialization.py  service.py
tests/: run_tests.py  test_audit.py  test_database_matcher.py  test_evaluation.py  test_http_middleware.py  test_identify.py  test_matcher.py  test_mcp_app.py  test_mcp_serialization.py  test_mcp_service.py  test_parsers.py  test_policy.py  test_probes.py  test_protocol_fingerprint_split.py  test_rule_regressions.py
(+9 files in other folders)
