[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "banner-scanner-mcp"
version = "0.6.0"
description = "Authorized six-protocol Banner probing and fingerprint identification MCP service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]==1.28.1",
]

[project.scripts]
banner-scanner = "banner_scanner.cli:main"
banner-scanner-mcp = "banner_scanner.server.mcp_server:main"
banner-scanner-mcp-http = "banner_scanner.server.mcp_http_server:main"

[tool.setuptools]
packages = [
  "banner_scanner",
  "banner_scanner.core",
  "banner_scanner.probes",
  "banner_scanner.server",
  "banner_scanner.evaluation",
]
package-dir = {banner_scanner = "."}
include-package-data = true

[tool.setuptools.package-data]
banner_scanner = [
  "mcp.json",
  "fingerprints/protocols/*.json",
  "fingerprints/databases/*.json",
]
